fix pandoc syntax highlighting quirk: long width code boxes overflow outside of container

--- a/webpage/github-pandoc.css
+++ b/webpage/github-pandoc.css
@@ -301,6 +301,12 @@ svg:not(:root) {
     }
 }
 
+/**
+ * Override pandoc generated CSS quirks.
+ */
+.sourceCode {
+    overflow: auto !important;
+}
 
 /* ==========================================================================
    Figures
